--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,29 @@
 ---
+#
+# Ansible managed
+#
 language: python
-services: docker
 
-env:
-  global:
-    - ROLE_NAME: sentry
-  matrix:
-    - MOLECULE_DISTRO: centos7
-    - MOLECULE_DISTRO: ubuntu1804
-    - MOLECULE_DISTRO: debian9
+os: linux
+dist: xenial
+
+python:
+  - "3.9"
+
+services:
+  - docker
+
+cache:
+  - pip
 
 install:
-  # Install test dependencies.
-  - pip install molecule docker
-
-before_script:
-  # Use actual Ansible Galaxy role name for the project directory.
-  - cd ../
-  - mv ansible-role-$ROLE_NAME Duologic.$ROLE_NAME
-  - cd Duologic.$ROLE_NAME
+  - pip install --upgrade pip
+  - pip install ansible ansible-lint yamllint
 
 script:
-  # Run tests.
-  - molecule test
+  - yamllint .
+  - ansible-lint
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  email: false
