--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,6 @@
 ---
 roles:
+  - name: buluma.bootstrap
   - name: Duologic.postgresql_repository
   - name: geerlingguy.redis
   - name: Duologic.postgresql_repository
