--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
   vars:
       packages:
           - virtualenv
-          - setuptools
+          - python3-setuptools
           - python3-dev
           - libxslt1-dev
           - gcc
@@ -26,7 +26,7 @@
   vars:
       packages:
           - virtualenv
-          - setuptools
+          - python3-setuptools
           - python3-devel
           - gcc
           - gcc-c++
