--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 
 molecule:
   script:
-    - image=${image} tag=${tag} molecule test
+    - image=${image} tag=${tag} molecule -v test
   retry: 1
   parallel:
     matrix:
