set sentry key var

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,6 +3,8 @@
   hosts: all
   become: yes
   gather_facts: yes
+  vars:
+    sentry_secret_key: 'SAFE'
 
   roles:
     - role: ansible-role-sentry
