--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,6 +3,8 @@
   hosts: all
   become: yes
   gather_facts: yes
+  vars:
+    ansible_ssh_user: ansible
 
   roles:
     - role: ansible-role-sentry
