requirements update ubuntu

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,14 @@ molecule:
     matrix:
       - image: "docker-ubuntu-systemd"
         tag: "bionic"
+      - image: "ubuntu"
+        tag: "22.04"
+      - image: "ubuntu"
+        tag: "21.04"
+      - image: "ubuntu"
+        tag: "20.04"
+      - image: "ubuntu"
+        tag: "18.04"
       - image: "centos"
         tag: "centos7"
       - image: "centos"
