--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,10 +22,10 @@ molecule:
         tag: "20.04"
       - image: "ubuntu"
         tag: "18.04"
-      - image: "centos"
-        tag: "centos7"
-      - image: "centos"
-        tag: "centos8"
+      # - image: "centos"
+      #   tag: "centos7"
+      # - image: "centos"
+      #   tag: "centos8"
       - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
