--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -11,6 +11,34 @@
     sentry_system_cron_minute: 0
     sentry_system_user: 'sentry'
     GEOIP_PATH_MMDB: '/geoip/GeoLite2-City.mmdb'
+    postgres_repo_version: '9.5'
+    postgresql_databases:
+      - name: '{{ sentry_db_name }}'
+    postgresql_users:
+      - name: '{{ sentry_db_user }}'
+        db: '{{ sentry_db_name }}'
+        role_attr_flags: SUPERUSER
+    postgresql_hba_entries:
+      - {type: local, database: all, user: postgres, auth_method: peer}
+      - {type: local, database: '{{ sentry_db_name }}', user: '{{ sentry_db_user }}', auth_method: trust}
 
-  roles:
-    - role: ansible-role-sentry
+  pre_tasks:
+    - name: Enable EPEL repo on EL for Redis role
+      yum: pkg=epel-release state=present
+      when: ansible_os_family == 'RedHat'
+  tasks:
+    - import_role:
+        name: geerlingguy.redis
+    - import_role:
+        name: Duologic.postgresql_repository
+    - import_role:
+        name: geerlingguy.postgresql
+    - meta: flush_handlers
+    - import_role:
+        name: ansible-role-sentry
+
+  post_tasks:
+    - name: Check if Sentry is running.
+      wait_for:
+        port: 9000
+        delay: 30
