--- a/requirements.yml
+++ b/requirements.yml
@@ -3,9 +3,8 @@ roles:
   - name: buluma.bootstrap
   - name: Duologic.postgresql_repository
   - name: geerlingguy.redis
-  - name: Duologic.postgresql_repository
   - name: geerlingguy.postgresql
-  - name: Duologic.sentry
+  - name: Duologic.sentry  # TODO: localise on release
   - name: buluma.buildtools
   - name: buluma.cron
 collections:
