--- a/requirements.yml
+++ b/requirements.yml
@@ -1,10 +1,10 @@
 ---
 roles:
   - name: buluma.bootstrap
-  - name: Duologic.postgresql_repository
+  - name: duologic.postgresql_repository
   - name: geerlingguy.redis
   - name: geerlingguy.postgresql
-  - name: Duologic.sentry  # TODO: localise on release
+  - name: duologic.sentry  # TODO: localise on release
   - name: buluma.buildtools
   - name: buluma.cron
 collections:
