--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,9 +1,17 @@
 ---
-- name: restart sentry
-  ansible.builtin.service:
-      name: '{{ item }}'
-      state: restarted
-  with_items:
-      - 'sentry-worker'
-      - 'sentry-cron'
-      - 'sentry-web'
+# handlers file for role_sentry
+
+- name: Restart Nginx
+  systemd:
+    name: nginx
+    state: restarted
+    enabled: yes
+
+- name: Start Sentry
+  docker_compose:
+    project_src: /home/{{ ansible_ssh_user }}/{{ getsentry_pkg_name.dest | regex_search('[^/]+(?=/$|\.tar.gz$)') }}
+    files:
+      - docker-compose.yml
+    build: no
+    state: present
+  ignore_errors: "{{ ansible_check_mode }}"
