--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,3 +22,6 @@ host_delay_time: 20
 # Sentry Admin User [UPATE ADMIN USER EMAIL AND PASSWORD]
 sentry_admin_email: "admin@sentry.com"
 sentry_admin_password: "ADMIN"
+
+# Hanging
+ansible_ssh_user: "sentry"
