--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 # tasks file for role_sentry
 
-# - name: Configuration to install necessary packages
-#   import_tasks: configure.yml
-#   tags:
-#     - configure
+- name: Configuration to install necessary packages
+  import_tasks: configure.yml
+  tags:
+    - configure
 
 - name: Configuration to install necessary packages
   import_tasks: install.yml
