--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,4 @@
 ansible>=2.7
 # Some Jinja2 filters are used that are available in the newer releases.
 jinja2>=2.11.2
-# petname
-petname>=2.5
+jmespath
