--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,31 +9,31 @@ variables:
   PY_COLORS: 1
 
 molecule:
+  stage: build
   script:
-    - image=${image} tag=${tag} molecule -v test
+    - image=${image} tag=${tag} molecule test
+  artifacts:
+    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_NAME"
+    paths:
+      - /
+    expire_in: 1 day
   retry: 1
   parallel:
     matrix:
-      - image: "ubuntu"
-        tag: "22.04"
-      - image: "ubuntu"
-        tag: "21.04"
-      - image: "ubuntu"
-        tag: "20.04"
-      - image: "ubuntu"
-        tag: "18.04"
-      # - image: "centos"
-      #   tag: "centos7"
-      # - image: "centos"
-      #   tag: "centos8"
+      - image: "docker-ubuntu-systemd"
+        tag: "bionic"
+      - image: "enterpriselinux"
+        tag: "7"
       - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
         tag: "bookworm"
 
 testing:
+  stage: test
+  needs: []
   script:
-    - image=${image} tag=${tag} molecule -v test
+    - image=${image} tag=${tag} molecule test
   rules:
     - if: $CI_COMMIT_REF_NAME == "testing"
   retry: 1
@@ -49,10 +49,14 @@ testing:
         tag: "bookworm"
 
 galaxy:
+  stage: deploy
+  needs: []
   script:
     - ansible-galaxy role info buluma.sentry
 
 role_testing:
+  stage: test
+  needs: []
   script:
     - image=${image} tag=${tag} ansible-galaxy install buluma.sentry
   retry: 1
@@ -66,3 +70,16 @@ role_testing:
         tag: "latest"
       - image: "debian-systemd"
         tag: "bookworm"
+
+release_job:
+  stage: .post
+  needs: [molecule]
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  rules:
+    - if: $CI_COMMIT_TAG
+  script:
+    - echo "Running the release job."
+  release:
+    tag_name: $CI_COMMIT_TAG
+    name: 'Release $CI_COMMIT_TAG'
+    description: 'Release created using the release-cli.'
