--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,18 +3,17 @@ dependencies: []
 
 galaxy_info:
   role_name: sentry
-  author: Michael Buluma
-  namespace: buluma
+  author: buluma
   description: Sentry installation with Python.
   license: "Apache-2.0"
-  min_ansible_version: 2.7
+  min_ansible_version: "2.12"
   platforms:
     - name: Ubuntu
       versions:
         - bionic
     - name: EL
       versions:
-        - 7
+        - "7"
     - name: Debian
       versions:
         - all
